tests/negative/test_decl_bad_type.orb
fnc main() () {
    sym (x:(i32 cn) 500);
    sym (y:u16 x);
};